--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <body>
   <div class="container">
     <div class="header-info">
-      <h1>Ibovespa - Histórico de Pontuação</h1>
+      <h1>Ibovespa - Atribuição de Performance</h1>
       <div class="subtitle" id="subtitle">Carregando dados da planilha...</div>
     </div>
     
