--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start; /* Alterado de center para flex-start */
+      justify-content: flex-start;
+      padding-top: 30px; /* Adicionado padding para dar mais espaço no topo */
     }
 
     .header-info {
       width: 95%;
       max-width: 1200px;
       text-align: center;
-      margin: 40px 0 20px 0; /* Adicionado margin-top de 40px */
+      margin: 0 0 25px 0; /* Ajustado margin-bottom para 25px */
       flex-shrink: 0;
     }
 
@@ -47,7 +48,7 @@
     .chart-main-container {
       width: 95%;
       max-width: 1200px;
-      height: 55vh; /* Reduzido de 70vh para 55vh */
+      height: 38vh; /* Reduzido em 40% (de 55vh para 38vh) */
       flex-grow: 1;
       display: flex;
       flex-direction: column;
