--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
       font-family: "DM Sans", sans-serif;
       color: #000;
       height: 100%;
-      overflow: hidden;
+      overflow-y: auto; /* Permitir rolagem vertical */
+      overflow-x: hidden; /* Impedir rolagem horizontal */
     }
 
     .container {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      min-height: 100vh; /* Usar min-height em vez de height fixo */
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      padding-top: 30px; /* Adicionado padding para dar mais espaço no topo */
+      padding: 20px 0; /* Adicionado padding vertical */
     }
 
     .header-info {
       width: 95%;
       max-width: 1200px;
       text-align: center;
-      margin: 0 0 25px 0; /* Ajustado margin-bottom para 25px */
+      margin-bottom: 25px;
       flex-shrink: 0;
     }
 
@@ -48,12 +48,13 @@
     .chart-main-container {
       width: 95%;
       max-width: 1200px;
-      height: 38vh; /* Reduzido em 40% (de 55vh para 38vh) */
-      flex-grow: 1;
+      height: auto; /* Altura automática */
+      min-height: 400px; /* Altura mínima */
       display: flex;
       flex-direction: column;
       align-items: center;
       position: relative;
+      margin-bottom: 30px; /* Espaço na parte inferior */
     }
 
     .chart-container {
@@ -61,11 +62,12 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 100%;
+      height: 400px; /* Altura fixa e menor */
       background-color: #fff;
       border-radius: 8px;
       padding: 10px;
       box-sizing: border-box;
+      border: 1px solid #eee; /* Adicionado borda para visualização */
     }
 
     canvas {
@@ -77,7 +79,7 @@
       display: flex;
       justify-content: center;
       gap: 10px;
-      margin-top: 15px;
+      margin-top: 20px;
       width: 100%;
       flex-shrink: 0;
     }
@@ -480,7 +482,7 @@
             const value = parseFloat(cleanedValue);
             
             if (isNaN(value) || value <= 0) {
-              console.warn(`Valor inválido na linha ${i + 1}: ${valueStr}`);
+              console.warn(`Valor inválida na linha ${i + 1}: ${valueStr}`);
               continue;
             }
             
