--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
         <thead>
           <tr>
             <th>Grupo de Empresas</th>
-            <th>Variação (%)</th>
-            <th>Contribuição (%)</th>
+            <th>Variação para o Ibov</th>
+            <th>Contribuição sobre variação</th>
           </tr>
         </thead>
         <tbody id="contributionsTableBody">
