--- a/index.html
+++ b/index.html
@@ -298,11 +298,12 @@
       gap: 20px;
       margin-top: 40px;
       margin-bottom: 40px;
+      justify-content: space-between;
     }
 
     /* ESTILOS DA TABELA */
     .table-container {
-      flex: 1;
+      width: 32%;
       border-radius: 8px;
       overflow: hidden;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -349,7 +350,7 @@
     }
 
     .table-title {
-      flex: 1;
+      width: 32%;
       text-align: left;
       margin-top: 40px;
       margin-bottom: 15px;
@@ -362,7 +363,7 @@
 
     /* Container para título + tabela */
     .table-section {
-      flex: 1;
+      width: 32%;
       display: flex;
       flex-direction: column;
     }
