--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       background-color: #164CAD;
       color: white;
       font-weight: 500;
-      text-align: left;
+      text-align: center;
       padding: 12px 16px;
     }
 
@@ -344,14 +344,14 @@
     }
 
     .contributions-table .value-cell {
-      text-align: right;
+      text-align: center;
       font-weight: 500;
       font-family: "DM Sans", sans-serif;
     }
 
     .table-title {
       width: 90%;
-      text-align: left;
+      text-align: center;
       margin-top: 40px;
       margin-bottom: 15px;
       font-family: "Montserrat", sans-serif;
