--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
       <!-- Tabela 1 -->
       <div class="table-section">
         <div class="table-title" id="tableTitle1">
-          Maiores empresas (1)
+          Maiores empresas
         </div>
         <div class="table-container" id="tableContainer1">
           <table class="contributions-table">
@@ -493,7 +493,7 @@
       <!-- Tabela 2 -->
       <div class="table-section">
         <div class="table-title" id="tableTitle2">
-          Maiores empresas (2)
+          Maiores contribuições - Ações
         </div>
         <div class="table-container" id="tableContainer2">
           <table class="contributions-table">
@@ -515,7 +515,7 @@
       <!-- Tabela 3 -->
       <div class="table-section">
         <div class="table-title" id="tableTitle3">
-          Maiores empresas (3)
+          Maiores contribuições - Setores
         </div>
         <div class="table-container" id="tableContainer3">
           <table class="contributions-table">
@@ -1498,7 +1498,7 @@
         }
         
         const minAllowedDate = MIN_ALLOWED_DATE;
-        let hasError = false;
+        let hasError = true;
         
         if (startDate < minAllowedDate) {
           startDateError.textContent = `Menor data disponível 30/12/2024`;
