--- a/index.html
+++ b/index.html
@@ -274,7 +274,6 @@
       overflow: hidden;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       display: none;
-      height: 370px; /* Altura fixa para todas as tabelas */
     }
 
     .contributions-table {
@@ -283,27 +282,6 @@
       font-family: "Montserrat", sans-serif;
       font-size: 13px;
       table-layout: fixed;
-      height: 100%; /* Garante que a tabela ocupe toda a altura do container */
-    }
-
-    .contributions-table thead {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
-    }
-
-    .contributions-table tbody {
-      display: block;
-      max-height: 320px; /* Altura fixa para o corpo da tabela */
-      overflow-y: auto;
-      width: 100%;
-    }
-
-    .contributions-table tr {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
-      height: 40px; /* Altura fixa para todas as linhas */
     }
 
     .contributions-table th {
@@ -316,15 +294,15 @@
       word-break: normal;
       overflow-wrap: normal;
       line-height: 1.2;
-      height: 50px; /* Altura fixa para o cabeçalho */
+      height: 50px;
     }
 
     .contributions-table td {
-      padding: 10px 8px;
+      padding: 12px 8px;
       border-bottom: 1px solid #e0e0e0;
       text-align: center;
       word-wrap: break-word;
-      height: 40px; /* Altura fixa para todas as células */
+      height: 40px;
       vertical-align: middle;
     }
 
@@ -384,7 +362,6 @@
       width: 32%;
       display: flex;
       flex-direction: column;
-      min-height: 420px; /* Altura mínima para a seção da tabela */
     }
 
     @media (max-width: 1300px) {
