--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>Simon</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
-    /* ----- NOVA NAVBAR PRETA ----- */
+    /* ----- NOVA NAVBAR PRETA (links à direita) ----- */
     .navbar {
       background-color: #000;
       padding: 12px 20px;
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: flex-end; /* ALTERADO PARA DIREITA */
       gap: 30px;
       font-family: "Montserrat", sans-serif;
       font-size: 16px;
@@ -418,7 +418,7 @@
   </style>
 </head>
 <body>
-  <!-- NOVA NAVBAR PRETA -->
+  <!-- NOVA NAVBAR PRETA (links à direita) -->
   <nav class="navbar">
     <a href="index.html">Histórico</a>
     <a href="hoje.html">Hoje</a>
