--- a/hoje.html
+++ b/hoje.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hoje</title>
-  <!-- Mesmas fontes usadas na navbar original -->
+  <!-- Mesmas fontes usadas na página original -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
-    /* Reset básico para que a navbar fique colada no topo */
+    /* Reset básico */
     html, body {
       margin: 0;
       padding: 0;
@@ -36,21 +36,175 @@
     .navbar a:hover {
       opacity: 0.8;
     }
-    /* ----- FIM DA NAVBAR ----- */
+
+    /* ----- ESTILOS DA TABELA (baseados na original) ----- */
+    .container {
+      width: 95%;
+      max-width: 1400px;
+      margin: 30px auto;
+      padding: 0 10px;
+    }
+
+    .table-title {
+      text-align: center;
+      margin-bottom: 20px;
+      font-family: "Montserrat", sans-serif;
+      font-size: 18px;
+      color: #1E4DB7;
+      font-weight: 500;
+    }
+
+    .table-wrapper {
+      overflow-x: auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .hoje-table {
+      width: 100%;
+      border-collapse: collapse;
+      font-family: "Montserrat", sans-serif;
+      font-size: 13px;
+      min-width: 800px;
+    }
+
+    .hoje-table th {
+      background-color: #164CAD;
+      color: white;
+      font-weight: 500;
+      text-align: center;
+      padding: 12px 8px;
+      white-space: normal;
+      line-height: 1.3;
+      height: 50px;
+      vertical-align: middle;
+    }
+
+    .hoje-table td {
+      padding: 10px 8px;
+      border-bottom: 1px solid #e0e0e0;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    .hoje-table tbody tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
+    .hoje-table tbody tr:hover {
+      background-color: #f0f5ff;
+    }
+
+    .hoje-table .setor-cell {
+      color: #333;
+    }
+
+    .hoje-table .valor-positivo {
+      color: #008000;
+      font-weight: 500;
+    }
+
+    .hoje-table .valor-negativo {
+      color: #ff0000;
+      font-weight: 500;
+    }
+
+    .hoje-table .peso-cell,
+    .hoje-table .contrib-cell,
+    .hoje-table .perc-cell {
+      color: #1E4DB7;
+      font-weight: 500;
+    }
+
+    /* Ajuste para quebras de linha nos cabeçalhos */
+    .hoje-table th br {
+      display: block;
+      content: "";
+      margin: 2px 0;
+    }
   </style>
 </head>
 <body>
-  <!-- Navbar idêntica à original, com links para Histórico (index.html) e Hoje (hoje.html) -->
+  <!-- Navbar idêntica à original -->
   <nav class="navbar">
     <a href="index.html">Histórico</a>
     <a href="hoje.html">Hoje</a>
   </nav>
 
+  <!-- Conteúdo da página Hoje -->
+  <div class="container">
+    <div class="table-title">
+      Acompanhamento Diário - Ibovespa
+    </div>
+
+    <div class="table-wrapper">
+      <table class="hoje-table">
+        <thead>
+          <tr>
+            <th>Ação</th>
+            <th>Setor</th>
+            <th>Peso no<br>Ibov</th>
+            <th>Variação %<br>Hoje</th>
+            <th>Contribuição<br>para Ibov</th>
+            <th>% da<br>contribuição</th>
+          </tr>
+        </thead>
+        <tbody id="tabelaHojeBody">
+          <!-- Linhas de exemplo (podem ser substituídas por dados reais via JavaScript) -->
+          <tr>
+            <td>VALE3</td>
+            <td class="setor-cell">Mineração</td>
+            <td class="peso-cell">12,34%</td>
+            <td class="valor-positivo">+1,23%</td>
+            <td class="contrib-cell">+0,15%</td>
+            <td class="perc-cell">5,2%</td>
+          </tr>
+          <tr>
+            <td>PETR4</td>
+            <td class="setor-cell">Petróleo</td>
+            <td class="peso-cell">10,21%</td>
+            <td class="valor-negativo">-0,87%</td>
+            <td class="contrib-cell">-0,09%</td>
+            <td class="perc-cell">-3,1%</td>
+          </tr>
+          <tr>
+            <td>ITUB4</td>
+            <td class="setor-cell">Financeiro</td>
+            <td class="peso-cell">8,75%</td>
+            <td class="valor-positivo">+0,54%</td>
+            <td class="contrib-cell">+0,05%</td>
+            <td class="perc-cell">1,7%</td>
+          </tr>
+          <tr>
+            <td>BBDC4</td>
+            <td class="setor-cell">Financeiro</td>
+            <td class="peso-cell">6,32%</td>
+            <td class="valor-positivo">+0,32%</td>
+            <td class="contrib-cell">+0,02%</td>
+            <td class="perc-cell">0,7%</td>
+          </tr>
+          <tr>
+            <td>ABEV3</td>
+            <td class="setor-cell">Bebidas</td>
+            <td class="peso-cell">5,07%</td>
+            <td class="valor-negativo">-0,41%</td>
+            <td class="contrib-cell">-0,02%</td>
+            <td class="perc-cell">-0,7%</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
   <!--
     =========================================================================
-    A partir daqui você pode adicionar o conteúdo específico da página "Hoje".
-    O navbar permanece exatamente como o original, sem nenhum outro elemento.
+    Área para futura implementação de carregamento de dados reais.
+    Por exemplo, você pode usar JavaScript para buscar dados de uma planilha
+    ou API e preencher a tabela dinamicamente.
     =========================================================================
   -->
+  <!-- <script>
+    // Código futuro para carregar dados do dia e preencher a tabela
+  </script> -->
 </body>
 </html>
