--- a/hoje.html
+++ b/hoje.html
@@ -161,7 +161,6 @@ function parseCSV(texto) {
 
 function formatarPeso(valor) {
   if (!valor || valor.trim() === '') return '-';
-  // Substitui vírgula por ponto para conversão numérica
   const numStr = valor.trim().replace(',', '.');
   const num = parseFloat(numStr);
   if (isNaN(num)) return '-';
@@ -183,10 +182,10 @@ async function carregarDados() {
       return;
     }
 
-    // Mapa ação -> setor (colunas 138 a 268 das linhas 0 e 1)
+    // --- Mapa ação -> setor a partir das colunas 138..268 (linhas 0 e 1) ---
     const acaoParaSetor = {};
-    const linhaSetor = linhas[0];
-    const linhaCodigo = linhas[1];
+    const linhaSetor = linhas[0];   // linha 0: setores
+    const linhaCodigo = linhas[1];  // linha 1: códigos
 
     for (let col = 138; col <= 268; col++) {
       if (linhaCodigo.length > col && linhaSetor.length > col) {
@@ -198,9 +197,10 @@ async function carregarDados() {
       }
     }
 
+    // --- Agora vamos extrair as ações de TODAS as linhas, incluindo linha 0 e 1 ---
     let linhasAdicionadas = 0;
-    // Começa da linha 2 (índice 2) — as duas primeiras são metadados
-    for (let i = 2; i < linhas.length; i++) {
+
+    for (let i = 0; i < linhas.length; i++) {
       const linha = linhas[i];
       if (linha.length > 300) {
         const acao = linha[300] ? linha[300].trim() : '';
